--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
     <input type="text" name="first" placeholder="First name"/><br><br>
     <input type="text" name="last" placeholder="Last name"/><br><br>
     <input type="number" name="age" placeholder="Age"/><br><br>
-    <input type="text" name="budget" placeholder="Budget for Vacation per night"/><br><br>
-    <p>Do you have kids ?</p>
-    <select name="kids" id="kids">
-    <option value="yes">YES</option>
-    <option value="no">NO</option>
-  </select>
+    <input type="number" name="passenger" placeholder="Number of passengers "/><br><br>
+    <input type="number" name="night" placeholder="Number of nights "/><br><br>
     <br><br>
     <input type="submit" name="sub" value="Submit"/>
 </form>
